--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,66 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+header{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  background-color: rgb(16, 16, 108);
+  height: 120px;
+  color: white;
+}
+
+header h1{
+  margin: 10px 0px 0px 20px;
+  font-size: 5em;
+}
+
+#newLogButton{
+  display: flex;
+  width: 20%;
+  height: 30%;
+  justify-self: end;
+  justify-content: center;
+  align-self: center;
+  align-content: center;
+  margin-right: 5%;
+  font-size: 1.5em;
+}
+
+.mainContent{
+  margin: 20px 80px;
+  font-size: 2em;
+}
+
+.contentBox{
+  display: block;
+  border: 2px solid rgb(43, 43, 43);
+}
+.contentBoxTitles{
+  background-color: rgb(158, 182, 255);
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+.contentItems{
+
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.col1{
+  justify-self: center;
+  grid-column: 1/2;
+}
+.contentItems img{
+  justify-self: center;
+  margin-top: 5%;
+  width: 65px;
+}
+.col2{
+  justify-self: center;
+  grid-column: 2/3;
+}
+.col3{
+  justify-self: center;
+  grid-column: 3/4;
+}
