--- a/src/index.css
+++ b/src/index.css
@@ -69,3 +69,38 @@ header h1{
   justify-self: center;
   grid-column: 3/4;
 }
+
+#showBox {
+  padding: 20px 40px;
+}
+
+#daysSinceCrisis {
+  font-size: .8em;
+  font-weight: bold;
+}
+
+#showOptions {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  margin-top: 30px;
+  height: 100px;
+}
+
+#showOptions button{
+  align-self: center;
+  height: 60%;
+  width: 70%;
+  font-size: 1em;
+}
+
+#backShow {
+  grid-column: 2/3;
+}
+
+#createLog form{
+  margin: 30px 50px;
+}
+#newName{
+  margin-left: 30px;
+  height: 30px;
+}
