--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,40 @@
 body {
+  box-sizing: border-box;
+  padding: 0;
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.home {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background-image: url(./images/captain-log.jpeg);
+  background-size: cover;
+}
+
+.home-heading {
+  color: #fff;
+}
+
+.home-link {
+  text-decoration: none;
+}
+
+h2, .button {
+  margin-left: 50px;
+}
+
+.logs, .edit-page {
+  margin-top: 20px;
+}
+
+.edit {
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  padding: 2rem;
+  border-radius: 10px;
+}
+
