--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,40 @@
-.logTable {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
+.table-container {
+  width: 100%;
+  max-width: 800px;
+  margin: 0 auto;
 }
-.logTable li {
-  list-style: none;
-  padding-bottom: 30px;
-}
+
 .table {
-  border: 2px solid black;
-  width: 70%;
+  width: 100%;
+  border-collapse: collapse;
+  text-align: left;
+}
+
+.table th,
+.table td {
+  padding: 8px;
+  border-bottom: 1px solid #ddd;
+}
+
+.table th {
+  background-color: #f2f2f2;
+  font-weight: bold;
+}
+
+.table tr:hover {
+  background-color: #f9f9f9;
+}
+.nav-bar {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+.nav-bar h2 {
+  justify-self: center;
+}
+.newLogButton {
+  justify-self: center;
+  align-self: center;
+
+  width: 20%;
+  height: 5vh;
 }
